--- a/leaseslicensing/frontend/leaseslicensing/package.json
+++ b/leaseslicensing/frontend/leaseslicensing/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^34.0.0",
     "@ckeditor/ckeditor5-vue": "^4.0.0",
+    "@dbca/gov-vue3-components": "^0.0.2",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@vue/cli-service": "^5.0.4",
     "datatables.net-bs5": "^1.12.1",
@@ -43,6 +44,7 @@
   ],
   "devDependencies": {
     "eslint": "^8.15.0",
+    "prettier": "2.8.4",
     "vls": "^0.7.6"
   }
 }
